--- a/StreetGeek.html
+++ b/StreetGeek.html
@@ -11,7 +11,7 @@
             <li></li>
             <li></li>
         </ul>
-        <p>My home page</p>
+        <p>My Street Geek page</p>
     </body>
         
     
