--- a/News.html
+++ b/News.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul class="nav-bar">
-            <li><a href="Index.html"> Home</a></li>
+            <li><a href="index.html"> Home</a></li>
             <li><a href="News.html"> News</a></li>
             <li><a href="Contact.html"> Contact</a></li>
         </ul>
